src/objects/aa_Agent_Report__c.object
<CustomObject>
    <description>This object will store all key information of reports submitted by sharer.
Record type will be created to distinguish the Unilever and Competitor Reports.
Status field will capture the status of the approval process of competitor reports.
Captured Images will be stored as attachment or document object.</description>
    <fields>
        <fullName>Agent_App_Unilever_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unilever Brand Name</label>
        <referenceTo>aa_Agent_App_Competitor_Brand__c</referenceTo>
        <relationshipLabel>Agent Reports (Agent App Brand)</relationshipLabel>
        <relationshipName>Agent_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approve_Reject__c</fullName>
        <label>Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <label>Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>aa_Agent_App_Category__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_Post_ID__c</fullName>
        <label>Chatter Post ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>aa_Cluster__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <formula>Country__r.Cluster_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_of_Business_Principles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code_of_Business_Principles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Brand</label>
        <referenceTo>aa_Agent_App_Competitor_Brand__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Name</label>
        <referenceTo>aa_Agent_Competitor__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>aa_Country__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Accepted_Code_of_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accepted Code of Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherBrandName__c</fullName>
        <label>Other Brand Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCompanyName__c</fullName>
        <label>Other Company Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectedBy__c</fullName>
        <label>RejectedBy</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_On__c</fullName>
        <label>Rejected_On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Description__c</fullName>
        <description>It saves the report description</description>
        <label>Report Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <label>Report Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_on__c</fullName>
        <label>Reporting on</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counterfeit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfect In Store Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>aa_Agent_Retailer__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Found it in store – publicly available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales material NOT marked confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saw it in the media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saw it on Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared by 3rd parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared by retail not marked confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade show or conference</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published (Public)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published (Private)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETS Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require CI Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI Manager Approval Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Topics__c</fullName>
        <description>List Of sub topics inserted for Competitor Report</description>
        <inlineHelpText>List Of sub topics inserted for Competitor Report</inlineHelpText>
        <label>Sub Topics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TF_Mention_User__c</fullName>
        <label>TF Mention User</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Topic_Name__c</fullName>
        <label>TF Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>aa_Topic__c</referenceTo>
        <relationshipLabel>Agent Reports</relationshipLabel>
        <relationshipName>Agent_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <description>This field contains the Department of Created by user - This field is used only for reporting.</description>
        <formula>CreatedBy.Department</formula>
        <inlineHelpText>This field contains the Department of Created by user - This field is used only for reporting.</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latitude__c</fullName>
        <label>latitude</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>longitude__c</fullName>
        <label>longitude</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Agent Report</label>
    <listViews>
        <fullName>CI_Manager_Africa_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team Africa</label>
        <language>en_US</language>
        <queue>CI_Manager_Africa_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_Default_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team Global</label>
        <language>en_US</language>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_Europe_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team Europe</label>
        <language>en_US</language>
        <queue>CI_Manager_Europe_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_Latin_America_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team Latin America</label>
        <language>en_US</language>
        <queue>CI_Manager_Latin_America_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_NametRub_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team NametRub</label>
        <language>en_US</language>
        <queue>CI_Manager_NametRub_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_North_America_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team North America</label>
        <language>en_US</language>
        <queue>CI_Manager_North_America_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_North_Asia_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team North Asia</label>
        <language>en_US</language>
        <queue>CI_Manager_North_Asia_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_SEAA_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team SEAA</label>
        <language>en_US</language>
        <queue>CI_Manager_SEAA_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CI_Manager_South_Asia_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CI Manager Approval Pending</value>
        </filters>
        <label>CI Team South Asia</label>
        <language>en_US</language>
        <queue>CI_Manager_South_Asia_Queue</queue>
        <sharedTo>
            <group>CI_Manager_Africa</group>
            <group>CI_Manager_Default</group>
            <group>CI_Manager_Europe</group>
            <group>CI_Manager_Latin_America</group>
            <group>CI_Manager_NametRub</group>
            <group>CI_Manager_North_America</group>
            <group>CI_Manager_North_Asia</group>
            <group>CI_Manager_SEAA</group>
            <group>CI_Manager_South_Asia</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ETS_Queue_aa_Agent_Report</fullName>
        <columns>NAME</columns>
        <columns>Report_Title__c</columns>
        <columns>Competitor_Brand__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Topic__c</columns>
        <columns>Sub_Topics__c</columns>
        <columns>Country__c</columns>
        <columns>Town__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ETS Approval Pending</value>
        </filters>
        <label>ETS Team</label>
        <language>en_US</language>
        <queue>ETS_Queue</queue>
        <sharedTo>
            <group>ETS_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Reports</pluralLabel>
    <recordTypes>
        <fullName>Agent_Report</fullName>
        <active>true</active>
        <label>Agent Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>CI_Manger_Record_type</fullName>
        <active>true</active>
        <label>CI Manger Record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor_Report</fullName>
        <active>true</active>
        <description>Log a report about a Competitor</description>
        <label>Competitor Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor_Review_Publish_Report</fullName>
        <active>true</active>
        <description>Changes page layout once report has been created</description>
        <label>Competitor Review/Publish Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>ETS_Members_Record_Type</fullName>
        <active>true</active>
        <label>ETS Members Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unilever_Agent_Published_Report</fullName>
        <active>true</active>
        <description>Changes page layout when report is published</description>
        <label>Unilever Agent Published Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unilever_Agent_Report</fullName>
        <active>true</active>
        <description>Log a report about a Unilever brand</description>
        <label>Unilever Agent Report</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Creator_Access__c</fullName>
        <label>Creator Access</label>
    </sharingReasons>
</CustomObject>